--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 
-APAP/db.sqlite3
-APAP/db.sqlite3
-APAP/db.sqlite3
-APAP/db.sqlite3
 
 APAP/db.sqlite3
-APAP/db.sqlite3
-APAP/db.sqlite3
-APAP/db.sqlite3
+*.pyc
 
-APAP/db.sqlite3
+
