--- a/APAP/requirements.txt
+++ b/APAP/requirements.txt
@@ -1,5 +1,8 @@
+asn1crypto==0.24.0
 certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
+cryptography==2.7
 defusedxml==0.6.0
 Django==2.2.2
 django-allauth==0.39.1
@@ -8,19 +11,28 @@ django-bootstrap-datepicker-plus==3.0.5
 django-bootstrap4==0.0.8
 django-image-cropping==1.2.0
 django-openid-auth==0.15
+django-pusherable==0.2.0
 django-simple-email-confirmation==0.60
 easy-thumbnails==2.6
 et-xmlfile==1.0.1
 idna==2.8
 jdcal==1.4.1
+ndg-httpsclient==0.5.1
 oauthlib==3.0.1
 openpyxl==2.6.2
+pdf-page-counter==0.4
 Pillow==6.0.0
+pusher==2.1.3
+pyasn1==0.4.6
+pycparser==2.19
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
 python3-openid==3.1.0
 pytz==2019.1
 requests==2.22.0
 requests-oauthlib==1.2.0
 six==1.12.0
 sqlparse==0.3.0
+terminaltables==3.1.0
 urllib3==1.25.3
 xlrd==1.2.0
